# PiPrime

./: README.md  api.go
api/: api.c  api.cpp  api.java  api.js  api.kotlin  api.php  api.py  api.rb  api.rs  api.swift  api.ts
benchmark/: benchmark_pi_prime_client.py  benchmark_pi_prime_model.py  benchmark_pi_prime_network.py  benchmark_pi_prime_node.py  benchmark_pi_prime_server.py  benchmark_prime_number_generator.py  benchmark_prime_number_verifier.py
cli/: cli.c  cli.cpp  cli.go  cli.java  cli.js  cli.php  cli.py  cli.rb  cli.rs  cli.swift  cli.ts
config/: .csproj  .sin  .vcxproj  .vcxproj.filters  CMakeLists.txt  Cargo.toml  Dockerfile  Gemfile  Makerfile  build.csproj  build.gradle  build.sbt  config.json  docker-compose.yml  go.mod  go.sum  network.config  package.json  pom.xml
gui/: gui.c  gui.cpp  gui.go  gui.java  gui.js  gui.kotlin  gui.php  gui.py  gui.rb  gui.rs  gui.swift  gui.ts
models/: pi_prime_client.py  pi_prime_model.py  pi_prime_network.py  pi_prime_node.py  pi_prime_server.py  prime_number_generator.py  prime_number_verifier.py
network/: pi_prame_network.js  pi_prime_network.c  pi_prime_network.cpp  pi_prime_network.go  pi_prime_network.java  pi_prime_network.kt  pi_prime_network.php  pi_prime_network.py  pi_prime_network.rb  pi_prime_network.rs  pi_prime_network.swift  pi_prime_network.ts
node/: pi_prime_node.c  pi_prime_node.cpp  pi_prime_node.go  pi_prime_node.java  pi_prime_node.js  pi_prime_node.kotlin  pi_prime_node.php  pi_prime_node.py  pi_prime_node.rb  pi_prime_node.rs  pi_prime_node.swift  pi_prime_node.ts
(+19 files in other folders)
